fix truncate li spacing

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -123,6 +123,8 @@ div.color-fix li{
   border-bottom:#C0D6E4;
   border-top:#C0D6E4;
   border-style: none;
+  margin: 0;
+    padding: 0;
 }
 
 div.color-fix ul{
@@ -132,6 +134,8 @@ div.color-fix ul{
   border-top:#C0D6E4;
   border-color: #C0D6E4;
   border-style: none;
+  margin: 0;
+    padding: 0;
   }
 
 #article{
